...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/backButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:minHeight="48dp"
...
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:layout_weight="2"
            android:text="@string/mYear"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/forwardButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/backButton"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Jan 2023" />

        <Button
...
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/sun"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="dateSet"
            android:text="@string/sunDate"
            android:textAlignment="center"
            android:textSize="16sp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/mon"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="dateSet"
            android:text="@string/monDate"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="dateSet"
            android:text="@string/tueDate"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/wed"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="dateSet"
            android:text="@string/wedDate"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/thur"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="dateSet"
            android:text="@string/thurDate"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/fri"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="dateSet"
            android:text="@string/friDate"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/sat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="dateClicked"
            android:text="@string/satDate"
...
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/purple_200"
        android:clickable="true"
...
