...
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_faq"
            app:destination="@id/nav_faq" />
        <action
            android:id="@+id/action_nav_home_to_nav_calendar"
            app:destination="@id/nav_calendar_fragment" />
        <action
            android:id="@+id/action_nav_home_to_nav_settings"
            app:destination="@id/nav_settings" />
        <action
            android:id="@+id/action_nav_home_to_nav_interactions"
            app:destination="@id/nav_interactions" />
...
        tools:layout="@layout/activity_calendar_fragment">
        <action
            android:id="@+id/action_nav_calendar_fragment_to_eventFragment3"
            app:destination="@id/eventFragment3" />
        <action
            android:id="@+id/action_nav_calendar_fragment_to_personalEventFragment"
            app:destination="@id/personalEventFragment" />
        <action
            android:id="@+id/action_nav_calendar_fragment_to_personalEventDetailFragment"
            app:destination="@id/personalEventDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/eventFragment3"
...
